sumo/tests/duarouter/trips/errors/vehicle_empty_arrivalpos/errors.duarouter
Error: Attribute 'arrivalpos' in definition of a trip is empty.
Error: Invalid arrivalpos definition for vehicle ''
Quitting (on error).
